--- a/data/raw/gis/vlm4rs/result/cot_output_gpt-5-2025-08-07/paper_4.yaml
+++ b/data/raw/gis/vlm4rs/result/cot_output_gpt-5-2025-08-07/paper_4.yaml
@@ -7,15 +7,15 @@
   - "Prior Methods"
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Rule-Based and OSM-Derived QA Pairs"
-  - "Attention-Based Co-Encoding"
+  - "Public Remote Sensing Benchmarks"
+  - "Feature-Level and Representation Fusion"
 - "unique_context_marker": "[2]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Language Models and Tokenization"
+  - "Feature-Level and Representation Fusion"
 - "unique_context_marker": "[3]"
   "block_ids":
   - 1
@@ -34,29 +34,29 @@
   - "Prior Methods"
   - "Result Comparison"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
-  - "Cross-Modal Alignment and Fusion"
+  - "Joint Vision–Language Backbones"
+  - "Evaluation Baselines and Tooling"
 - "unique_context_marker": "[5]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[6]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[7]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[8]"
   "block_ids":
   - 1
@@ -94,7 +94,7 @@
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Language Models and Tokenization"
 - "unique_context_marker": "[13]"
   "block_ids":
   - 2
@@ -113,16 +113,16 @@
   "block_ids":
   - 3
   "intent_labels":
-  - "Benchmark Utilization"
+  - "Setting/Protocal Adoption"
   "topic_labels":
-  - "Train/Val/Test Splits and Domain-Shift Protocols"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[16]"
   "block_ids":
   - 3
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Dataset Construction and Supervision Sources"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[17]"
   "block_ids":
   - 3
