--- a/data/raw/gis/vlm4rs/result/cot_output_gpt-5-2025-08-07/paper_7.yaml
+++ b/data/raw/gis/vlm4rs/result/cot_output_gpt-5-2025-08-07/paper_7.yaml
@@ -12,24 +12,24 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - "Image-Level Understanding"
 - "unique_context_marker": "[3]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - "Image-Level Understanding"
 - "unique_context_marker": "[4]"
   "block_ids":
   - 1
   - 5
   "intent_labels":
   - "Prospective Application"
-  - "Background"
+  - "Research Gap"
   "topic_labels":
-  - "Other Topics"
-  - "Rule-Based and OSM-Derived QA Pairs"
+  - "Object-Level Understanding"
+  - "Manual Expert or Crowdsourced Annotation"
 - "unique_context_marker": "[5]"
   "block_ids":
   - 1
@@ -38,20 +38,20 @@
   - "Problem Formulation"
   - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
-  - "Instruction-Following Conversational Sets"
+  - "Feature-Level and Representation Fusion"
+  - "Manual Expert or Crowdsourced Annotation"
 - "unique_context_marker": "[6]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Research Gap"
+  - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - "Language- or Instruction-Derived RS Supervision"
 - "unique_context_marker": "[7]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
   - "Image-Level Understanding"
 - "unique_context_marker": "[8]"
@@ -87,42 +87,42 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - "Image-Level Understanding"
 - "unique_context_marker": "[12]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Visual Grounding Corpora and Geometry Labels"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[13]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - "Object-Level Understanding"
 - "unique_context_marker": "[14]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - "Pixel-Level and Dense Outputs"
 - "unique_context_marker": "[15]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Visual Grounding Corpora and Geometry Labels"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[16]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - "Pixel-Level and Dense Outputs"
 - "unique_context_marker": "[17]"
   "block_ids":
   - 1
@@ -131,7 +131,7 @@
   - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
-  - "Visual Grounding Corpora and Geometry Labels"
+  - "Public Remote Sensing Benchmarks"
   - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[18]"
   "block_ids":
@@ -158,23 +158,23 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
   - "Image-Level Understanding"
 - "unique_context_marker": "[22]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
   - "Image-Level Understanding"
 - "unique_context_marker": "[23]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
-  - "Contrastive Alignment Objectives"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[24]"
   "block_ids":
   - 1
@@ -186,57 +186,57 @@
   - "Prior Methods"
   "topic_labels":
   - "Other Topics"
-  - "Cross-Modal Alignment and Fusion"
-  - "Attention-Based Co-Encoding"
+  - "Feature-Level and Representation Fusion"
+  - "Language-Conditioned or Semantic Fusion"
 - "unique_context_marker": "[25]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Language-Conditioned or Semantic Fusion"
 - "unique_context_marker": "[26]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Feature-Level and Representation Fusion"
 - "unique_context_marker": "[27]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Language-Conditioned or Semantic Fusion"
 - "unique_context_marker": "[28]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Train/Val/Test Splits and Domain-Shift Protocols"
+  - "Domain Shift and Data Scarcity Effects"
 - "unique_context_marker": "[29]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Cross-Sensor and Cross-Region Transfer"
+  - "Other Topics"
 - "unique_context_marker": "[30]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Instruction Tuning and SFT"
+  - "Instruction Tuning and Supervised Fine-Tuning (SFT)"
 - "unique_context_marker": "[31]"
   "block_ids":
   - 3
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Rule-Based and OSM-Derived QA Pairs"
+  - "Synthetic and Simulated RS Imagery"
 - "unique_context_marker": "[32]"
   "block_ids":
   - 7
@@ -251,12 +251,12 @@
   - 12
   "intent_labels":
   - "Prior Methods"
-  - "Research Gap"
+  - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
   - "Vision Encoder Choices and Scales"
-  - "Small Object Density and Counting Challenges"
-  - "Small Object Density and Counting Challenges"
+  - "Output Consistency and Error Characteristics"
+  - "Answer Space Constraints"
 - "unique_context_marker": "[34]"
   "block_ids":
   - 7
@@ -284,32 +284,32 @@
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Other Topics"
+  - "Training and Adaptation Regimes"
 - "unique_context_marker": "[38]"
   "block_ids":
   - 11
   "intent_labels":
-  - "Research Gap"
+  - "Prior Methods"
   "topic_labels":
-  - "Small Object Density and Counting Challenges"
+  - "Output Consistency and Error Characteristics"
 - "unique_context_marker": "[39]"
   "block_ids":
   - 11
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Cross-Sensor and Cross-Region Transfer"
+  - "Domain Shift and Data Scarcity Effects"
 - "unique_context_marker": "[40]"
   "block_ids":
   - 11
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Cross-Sensor and Cross-Region Transfer"
+  - "Domain Shift and Data Scarcity Effects"
 - "unique_context_marker": "[41]"
   "block_ids":
   - 11
   "intent_labels":
-  - "Research Gap"
+  - "Prior Methods"
   "topic_labels":
-  - "Bias Analysis and Error Taxonomies"
+  - "Bias and Fairness Considerations"
