--- a/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_10.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_10.yaml
@@ -3,11 +3,7 @@
   "block_ids":
   - 0
   "intent_labels":
-  - - "Resource Utilization"
-    - "Resource Utilization"
-    - "Resource Utilization"
-    - "Resource Utilization"
-    - "Resource Utilization"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[38]"
@@ -16,11 +12,7 @@
   - 1
   - 5
   "intent_labels":
-  - - "Resource Utilization"
-    - "Resource Utilization"
-    - "Resource Utilization"
-    - "Resource Utilization"
-    - "Resource Utilization"
+  - []
   - []
   - []
   "topic_labels":
@@ -32,11 +24,7 @@
   - 0
   - 5
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   - []
   "topic_labels":
   - []
@@ -45,22 +33,14 @@
   "block_ids":
   - 0
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[35]"
   "block_ids":
   - 0
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[7]"
@@ -71,39 +51,31 @@
   - 7
   - 8
   "intent_labels":
-  - - "Resource Utilization"
-    - "Resource Utilization"
-    - "Resource Utilization"
-    - "Resource Utilization"
-    - "Resource Utilization"
+  - []
   - []
   - []
   - []
   - []
   "topic_labels":
   - []
-  - - "Visual Grounding Corpora and Geometry Labels"
-    - "Visual Grounding Corpora and Geometry Labels"
-    - "Visual Grounding Corpora and Geometry Labels"
-    - "Visual Grounding Corpora and Geometry Labels"
-    - "Visual Grounding Corpora and Geometry Labels"
-  - - "Instruction-Following Conversational Sets"
-    - "Instruction-Following Conversational Sets"
-    - "Train/Val/Test Splits and Domain-Shift Protocols"
-    - "Instruction-Following Conversational Sets"
-    - "Instruction-Following Conversational Sets"
+  - - "Object-Level Understanding"
+    - "Object-Level Understanding"
+    - "Public Remote Sensing Benchmarks"
+    - "Object-Level Understanding"
+    - "Public Remote Sensing Benchmarks"
   - []
+  - - "Evaluation Baselines and Tooling"
+    - "Evaluation Baselines and Tooling"
+    - "Joint Vision–Language Backbones"
+    - "Evaluation Baselines and Tooling"
+    - "Evaluation Baselines and Tooling"
   - []
 - "unique_context_marker": "[37]"
   "block_ids":
   - 0
   - 1
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   - []
   "topic_labels":
   - []
@@ -112,11 +84,7 @@
   "block_ids":
   - 0
   "intent_labels":
-  - - "Prospective Application"
-    - "Prospective Application"
-    - "Prospective Application"
-    - "Prospective Application"
-    - "Prospective Application"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[17]"
@@ -125,112 +93,60 @@
   - 1
   - 9
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   - []
   - []
   "topic_labels":
   - []
   - []
-  - - "Visual Grounding Corpora and Geometry Labels"
-    - "Visual Grounding Corpora and Geometry Labels"
-    - "Visual Grounding Corpora and Geometry Labels"
-    - "Visual Grounding Corpora and Geometry Labels"
-    - "Visual Grounding Corpora and Geometry Labels"
+  - []
 - "unique_context_marker": "[28]"
   "block_ids":
   - 0
   "intent_labels":
-  - - "Prior Methods"
-    - "Research Gap"
-    - "Research Gap"
-    - "Prior Methods"
-    - "Research Gap"
+  - []
   "topic_labels":
-  - - "Hybrid Supervision and Consistency Losses"
-    - "Hybrid Supervision and Consistency Losses"
-    - "Training and Adaptation Regimes"
-    - "Hybrid Supervision and Consistency Losses"
-    - "Hybrid Supervision and Consistency Losses"
+  - []
 - "unique_context_marker": "[1]"
   "block_ids":
   - 0
   - 7
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   - []
   "topic_labels":
-  - - "Vision-Language Connectors to LLMs"
-    - "Vision-Language Connectors to LLMs"
-    - "Vision-Language Connectors to LLMs"
-    - "Instruction Tuning and SFT"
-    - "Vision-Language Connectors to LLMs"
+  - []
   - []
 - "unique_context_marker": "[2]"
   "block_ids":
   - 0
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   "topic_labels":
-  - - "Vision-Language Connectors to LLMs"
-    - "Vision-Language Connectors to LLMs"
-    - "Vision-Language Connectors to LLMs"
-    - "Instruction Tuning and SFT"
-    - "Vision-Language Connectors to LLMs"
+  - []
 - "unique_context_marker": "[5]"
   "block_ids":
   - 0
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   "topic_labels":
-  - - "Vision-Language Connectors to LLMs"
-    - "Vision-Language Connectors to LLMs"
-    - "Vision-Language Connectors to LLMs"
-    - "Instruction Tuning and SFT"
-    - "Vision-Language Connectors to LLMs"
+  - []
 - "unique_context_marker": "[16]"
   "block_ids":
   - 0
   - 6
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   - []
   "topic_labels":
-  - - "Vision-Language Connectors to LLMs"
-    - "Vision-Language Connectors to LLMs"
-    - "Vision-Language Connectors to LLMs"
-    - "Instruction Tuning and SFT"
-    - "Vision-Language Connectors to LLMs"
+  - []
   - []
 - "unique_context_marker": "[4]"
   "block_ids":
   - 0
   - 1
   "intent_labels":
-  - - "Research Gap"
-    - "Research Gap"
-    - "Research Gap"
-    - "Research Gap"
-    - "Research Gap"
+  - []
   - []
   "topic_labels":
   - []
@@ -241,16 +157,8 @@
   - 1
   - 5
   "intent_labels":
-  - - "Resource Utilization"
-    - "Resource Utilization"
-    - "Resource Utilization"
-    - "Resource Utilization"
-    - "Resource Utilization"
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
+  - []
   - []
   "topic_labels":
   - []
@@ -311,19 +219,27 @@
   - 3
   "intent_labels":
   - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
     - "Research Gap"
+    - "Prior Methods"
+    - "Prior Methods"
     - "Research Gap"
   - []
   "topic_labels":
-  - []
+  - - "Object-Level Understanding"
+    - "Object-Level Understanding"
+    - "Object-Level Understanding"
+    - "Object-Level Understanding"
+    - "Object-Level Understanding"
   - []
 - "unique_context_marker": "[8]"
   "block_ids":
   - 1
   "intent_labels":
-  - []
+  - - "Prior Methods"
+    - "Research Gap"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Research Gap"
   "topic_labels":
   - []
 - "unique_context_marker": "[23]"
@@ -351,29 +267,25 @@
   "block_ids":
   - 1
   "intent_labels":
-  - []
+  - - "Prior Methods"
+    - "Research Gap"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Research Gap"
   "topic_labels":
   - []
 - "unique_context_marker": "[32]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[42]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[21]"
@@ -409,22 +321,14 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Vision Encoder Choices and Scales"
-    - "Vision Encoder Choices and Scales"
-    - "Vision Encoder Choices and Scales"
-    - "Vision Encoder Choices and Scales"
-    - "Vision Encoder Choices and Scales"
+  - []
 - "unique_context_marker": "[43]"
   "block_ids":
   - 2
   "intent_labels":
   - []
   "topic_labels":
-  - - "Language Models and Tokenization"
-    - "Language Models and Tokenization"
-    - "Language Models and Tokenization"
-    - "Language Models and Tokenization"
-    - "Language Models and Tokenization"
+  - []
 - "unique_context_marker": "[44]"
   "block_ids":
   - 3
@@ -462,7 +366,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Evaluation Baselines and Tooling"
+    - "Spatial Performance Metrics"
+    - "Spatial Performance Metrics"
+    - "Spatial Performance Metrics"
+    - "Spatial Performance Metrics"
 - "unique_context_marker": "[36]"
   "block_ids":
   - 8
@@ -476,19 +384,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Metrics and Thresholds for Grounding"
-    - "Metrics and Thresholds for Grounding"
-    - "Metrics and Thresholds for Grounding"
-    - "Metrics and Thresholds for Grounding"
-    - "Metrics and Thresholds for Grounding"
+  - []
 - "unique_context_marker": "[6]"
   "block_ids":
   - 9
   "intent_labels":
   - []
   "topic_labels":
-  - - "Region and Point Prompting Interfaces"
-    - "Region and Point Prompting Interfaces"
-    - "Region and Point Prompting Interfaces"
-    - "Region and Point Prompting Interfaces"
-    - "Region and Point Prompting Interfaces"
+  - []
