--- a/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_2.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_2.yaml
@@ -73,7 +73,11 @@
   "block_ids":
   - 1
   "intent_labels":
-  - []
+  - - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
   "topic_labels":
   - []
 - "unique_context_marker": "[12]"
@@ -82,22 +86,14 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Attention-Based Co-Encoding"
-    - "Attention-Based Co-Encoding"
-    - "Attention-Based Co-Encoding"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
+  - []
 - "unique_context_marker": "[13]"
   "block_ids":
   - 1
   "intent_labels":
   - []
   "topic_labels":
-  - - "Attention-Based Co-Encoding"
-    - "Attention-Based Co-Encoding"
-    - "Attention-Based Co-Encoding"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
+  - []
 - "unique_context_marker": "[14]"
   "block_ids":
   - 1
