--- a/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_3.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_3.yaml
@@ -5,7 +5,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
 - "unique_context_marker": "[3, 4, 9, 10]"
   "block_ids":
   - 1
@@ -26,7 +30,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
 - "unique_context_marker": "[12, 15]"
   "block_ids":
   - 1
@@ -43,29 +51,29 @@
   - 13
   - 16
   "intent_labels":
-  - - "Prior Methods"
-    - "Model/Architecture Adoption"
+  - - "Model/Architecture Adoption"
     - "Model/Architecture Adoption"
     - "Prior Methods"
     - "Model/Architecture Adoption"
+    - "Algorithm/Principle Adoption"
   - []
   - []
   - []
   - []
   - []
   "topic_labels":
-  - []
+  - - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
   - - "Self-Supervised Pretraining on RS Data"
     - "Self-Supervised Pretraining on RS Data"
     - "Self-Supervised Pretraining on RS Data"
     - "Self-Supervised Pretraining on RS Data"
     - "Self-Supervised Pretraining on RS Data"
   - []
-  - - "Self-Supervised Pretraining on RS Data"
-    - "Multispectral and Temporal Encodings"
-    - "Multispectral and Temporal Encodings"
-    - "Self-Supervised Pretraining on RS Data"
-    - "Multispectral and Temporal Encodings"
+  - []
   - []
   - - "Self-Supervised Pretraining on RS Data"
     - "Self-Supervised Pretraining on RS Data"
@@ -90,11 +98,15 @@
     - "Domain Overview"
     - "Domain Overview"
     - "Domain Overview"
-    - "Resource Utilization"
+    - "Domain Overview"
   - []
   "topic_labels":
   - []
-  - []
+  - - "Public Remote Sensing Benchmarks"
+    - "Public Remote Sensing Benchmarks"
+    - "Public Remote Sensing Benchmarks"
+    - "Public Remote Sensing Benchmarks"
+    - "Public Remote Sensing Benchmarks"
   - []
 - "unique_context_marker": "[18]"
   "block_ids":
@@ -136,7 +148,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
+    - "Self-Supervised Pretraining on RS Data"
 - "unique_context_marker": "[31]"
   "block_ids":
   - 1
@@ -181,35 +197,63 @@
   "block_ids":
   - 2
   "intent_labels":
-  - []
+  - - "Domain Overview"
+    - "Domain Overview"
+    - "Prior Methods"
+    - "Research Gap"
+    - "Prior Methods"
   "topic_labels":
-  - []
+  - - "Temporal and Multimodal Variants"
+    - "Temporal and Multimodal Variants"
+    - "Temporal and Multimodal Variants"
+    - "Temporal and Multimodal Variants"
+    - "Temporal and Multimodal Variants"
 - "unique_context_marker": "[39, 40]"
   "block_ids":
   - 2
   "intent_labels":
-  - []
+  - - "Domain Overview"
+    - "Domain Overview"
+    - "Prior Methods"
+    - "Research Gap"
+    - "Prior Methods"
   "topic_labels":
-  - []
+  - - "Temporal and Multimodal Variants"
+    - "Temporal and Multimodal Variants"
+    - "Temporal and Multimodal Variants"
+    - "Temporal and Multimodal Variants"
+    - "Temporal and Multimodal Variants"
 - "unique_context_marker": "[41, 42, 43, 44]"
   "block_ids":
   - 2
   "intent_labels":
-  - []
+  - - "Domain Overview"
+    - "Domain Overview"
+    - "Prior Methods"
+    - "Research Gap"
+    - "Prior Methods"
   "topic_labels":
   - []
 - "unique_context_marker": "[45]"
   "block_ids":
   - 2
   "intent_labels":
-  - []
+  - - "Domain Overview"
+    - "Domain Overview"
+    - "Prior Methods"
+    - "Research Gap"
+    - "Prior Methods"
   "topic_labels":
   - []
 - "unique_context_marker": "[46, 47, 48, 27]"
   "block_ids":
   - 2
   "intent_labels":
-  - []
+  - - "Domain Overview"
+    - "Domain Overview"
+    - "Prior Methods"
+    - "Research Gap"
+    - "Prior Methods"
   "topic_labels":
   - []
 - "unique_context_marker": "[2, 3, 4, 5, 6]"
@@ -255,7 +299,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Pairwise or Relational RS Supervision"
+    - "Pairwise or Relational RS Supervision"
+    - "Pairwise or Relational RS Supervision"
+    - "Pairwise or Relational RS Supervision"
+    - "Pairwise or Relational RS Supervision"
 - "unique_context_marker": "[50, 51, 52]"
   "block_ids":
   - 2
@@ -285,44 +333,56 @@
   "intent_labels":
   - []
   - []
-  - - "Algorithm/Principle Adoption"
+  - - "Prior Methods"
     - "Prior Methods"
     - "Algorithm/Principle Adoption"
-    - "Prior Methods"
+    - "Algorithm/Principle Adoption"
     - "Prior Methods"
   "topic_labels":
-  - []
-  - []
+  - - "Multispectral and Temporal Encodings"
+    - "Self-Supervised Pretraining on RS Data"
+    - "Multispectral and Temporal Encodings"
+    - "Self-Supervised Pretraining on RS Data"
+    - "Multispectral and Temporal Encodings"
+  - - "Multispectral and Temporal Encodings"
+    - "Multispectral and Temporal Encodings"
+    - "Multispectral and Temporal Encodings"
+    - "Multispectral and Temporal Encodings"
+    - "Multispectral and Temporal Encodings"
   - []
 - "unique_context_marker": "[55]"
   "block_ids":
   - 2
   "intent_labels":
-  - []
+  - - "Research Gap"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Research Gap"
+    - "Research Gap"
   "topic_labels":
   - []
 - "unique_context_marker": "[56]"
   "block_ids":
   - 2
   "intent_labels":
-  - []
+  - - "Research Gap"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Research Gap"
+    - "Research Gap"
   "topic_labels":
-  - - "Multispectral and Temporal Encodings"
-    - "Multispectral and Temporal Encodings"
-    - "Multispectral and Temporal Encodings"
-    - "Attention-Based Co-Encoding"
-    - "Multispectral and Temporal Encodings"
+  - - "Cross-Sensor and Cross-Modality Fusion"
+    - "Cross-Sensor and Cross-Modality Fusion"
+    - "Cross-Sensor and Cross-Modality Fusion"
+    - "Cross-Sensor and Cross-Modality Fusion"
+    - "Cross-Sensor and Cross-Modality Fusion"
 - "unique_context_marker": "[57, 58]"
   "block_ids":
   - 5
   "intent_labels":
   - []
   "topic_labels":
-  - - "Vision Encoder Choices and Scales"
-    - "Multispectral and Temporal Encodings"
-    - "Multispectral and Temporal Encodings"
-    - "Vision Encoder Choices and Scales"
-    - "Multispectral and Temporal Encodings"
+  - []
 - "unique_context_marker": "[54, 59, 60]"
   "block_ids":
   - 7
@@ -353,11 +413,7 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Multispectral and Temporal Encodings"
-    - "Multispectral and Temporal Encodings"
-    - "Multispectral and Temporal Encodings"
-    - "Multispectral and Temporal Encodings"
-    - "Multispectral and Temporal Encodings"
+  - []
 - "unique_context_marker": "[62, 3]"
   "block_ids":
   - 13
