--- a/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_4.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_4.yaml
@@ -8,11 +8,7 @@
   - []
   "topic_labels":
   - []
-  - - "Attention-Based Co-Encoding"
-    - "Cross-Modal Alignment and Fusion"
-    - "Attention-Based Co-Encoding"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
+  - []
 - "unique_context_marker": "[2]"
   "block_ids":
   - 1
@@ -26,7 +22,11 @@
   - 2
   "intent_labels":
   - []
-  - []
+  - - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Model/Architecture Adoption"
+    - "Prior Methods"
   "topic_labels":
   - []
   - []
@@ -65,11 +65,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[9]"
@@ -102,18 +98,18 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Representation Learning Backbones for RS"
+    - "Representation Learning Backbones for RS"
+    - "Representation Learning Backbones for RS"
+    - "Representation Learning Backbones for RS"
+    - "Representation Learning Backbones for RS"
 - "unique_context_marker": "[13]"
   "block_ids":
   - 2
   "intent_labels":
   - []
   "topic_labels":
-  - - "Vision Encoder Choices and Scales"
-    - "Vision Encoder Choices and Scales"
-    - "Vision Encoder Choices and Scales"
-    - "Vision Encoder Choices and Scales"
-    - "Vision Encoder Choices and Scales"
+  - []
 - "unique_context_marker": "[14]"
   "block_ids":
   - 2
