--- a/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_8.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_8.yaml
@@ -3,216 +3,124 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Prospective Application"
-    - "Prospective Application"
-    - "Prospective Application"
-    - "Prospective Application"
-    - "Prospective Application"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[2]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Prospective Application"
-    - "Prospective Application"
-    - "Prospective Application"
-    - "Prospective Application"
-    - "Prospective Application"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[3]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Prospective Application"
-    - "Prospective Application"
-    - "Prospective Application"
-    - "Prospective Application"
-    - "Prospective Application"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[4]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   "topic_labels":
-  - - "Image-Level Understanding"
-    - "Vision Encoder Choices and Scales"
-    - "Representation Learning Backbones for RS"
-    - "Vision Encoder Choices and Scales"
-    - "Vision Encoder Choices and Scales"
+  - []
 - "unique_context_marker": "[5]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   "topic_labels":
-  - - "Pixel-Level and Dense Outputs"
-    - "Vision Encoder Choices and Scales"
-    - "Representation Learning Backbones for RS"
-    - "Vision Encoder Choices and Scales"
-    - "Vision Encoder Choices and Scales"
+  - []
 - "unique_context_marker": "[6]"
   "block_ids":
   - 1
   - 3
   - 4
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
   - []
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
+  - []
   "topic_labels":
-  - - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
   - []
   - []
+  - - "Parameter-Efficient Adaptation"
+    - "Parameter-Efficient Adaptation"
+    - "Parameter-Efficient Adaptation"
+    - "Parameter-Efficient Adaptation"
+    - "Parameter-Efficient Adaptation"
 - "unique_context_marker": "[7]"
   "block_ids":
   - 1
   - 4
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
+  - []
   "topic_labels":
-  - - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-  - - "Image-Level Understanding"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Image-Level Understanding"
-    - "Cross-Modal Alignment and Fusion"
+  - []
+  - - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[8]"
   "block_ids":
   - 1
   - 4
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-  "topic_labels":
-  - - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
   - []
+  - []
+  "topic_labels":
+  - []
+  - - "Output Consistency and Error Characteristics"
+    - "Instruction Tuning and Supervised Fine-Tuning (SFT)"
+    - "Output Consistency and Error Characteristics"
+    - "Output Consistency and Error Characteristics"
+    - "Output Consistency and Error Characteristics"
 - "unique_context_marker": "[9]"
   "block_ids":
   - 1
   - 4
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
+  - []
   "topic_labels":
-  - - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-  - - "Image-Level Understanding"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Image-Level Understanding"
-    - "Cross-Modal Alignment and Fusion"
+  - []
+  - - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[10]"
   "block_ids":
   - 1
   - 4
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
+  - []
   "topic_labels":
-  - - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-  - - "Image-Level Understanding"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Image-Level Understanding"
-    - "Cross-Modal Alignment and Fusion"
+  - []
+  - - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[11]"
   "block_ids":
   - 1
   - 4
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
+  - []
   "topic_labels":
-  - - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-  - - "Image-Level Understanding"
-    - "Cross-Modal Alignment and Fusion"
-    - "Cross-Modal Alignment and Fusion"
-    - "Image-Level Understanding"
-    - "Cross-Modal Alignment and Fusion"
+  - []
+  - - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[12]"
   "block_ids":
   - 3
@@ -268,79 +176,99 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Language- or Instruction-Derived RS Supervision"
+    - "Language- or Instruction-Derived RS Supervision"
+    - "Language- or Instruction-Derived RS Supervision"
+    - "Language- or Instruction-Derived RS Supervision"
+    - "Language- or Instruction-Derived RS Supervision"
 - "unique_context_marker": "[20]"
   "block_ids":
   - 3
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Public Remote Sensing Benchmarks"
+    - "Public Remote Sensing Benchmarks"
+    - "Public Remote Sensing Benchmarks"
+    - "Public Remote Sensing Benchmarks"
+    - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[21]"
   "block_ids":
   - 3
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Public Remote Sensing Benchmarks"
+    - "Public Remote Sensing Benchmarks"
+    - "Public Remote Sensing Benchmarks"
+    - "Public Remote Sensing Benchmarks"
+    - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[22]"
   "block_ids":
   - 4
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-  "topic_labels":
   - []
+  "topic_labels":
+  - - "Other Topics"
+    - "Other Topics"
+    - "Other Topics"
+    - "Other Topics"
+    - "Other Topics"
 - "unique_context_marker": "[23]"
   "block_ids":
   - 4
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-  "topic_labels":
   - []
+  "topic_labels":
+  - - "Joint Vision–Language Backbones"
+    - "Image-Level Understanding"
+    - "Joint Vision–Language Backbones"
+    - "Image-Level Understanding"
+    - "Image-Level Understanding"
 - "unique_context_marker": "[24]"
   "block_ids":
   - 4
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-  "topic_labels":
   - []
+  "topic_labels":
+  - - "Instruction Tuning and Supervised Fine-Tuning (SFT)"
+    - "Instruction Tuning and Supervised Fine-Tuning (SFT)"
+    - "Instruction Tuning and Supervised Fine-Tuning (SFT)"
+    - "Instruction Tuning and Supervised Fine-Tuning (SFT)"
+    - "Instruction Tuning and Supervised Fine-Tuning (SFT)"
 - "unique_context_marker": "[25]"
   "block_ids":
   - 4
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-  "topic_labels":
   - []
+  "topic_labels":
+  - - "Multi-Task and Joint Training"
+    - "Multi-Task and Joint Training"
+    - "Multi-Task and Joint Training"
+    - "Multi-Task and Joint Training"
+    - "Multi-Task and Joint Training"
 - "unique_context_marker": "[26]"
   "block_ids":
   - 6
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Language Models and Tokenization"
+    - "Language- or Instruction-Derived RS Supervision"
+    - "Language Models and Tokenization"
+    - "Language Models and Tokenization"
+    - "Language- or Instruction-Derived RS Supervision"
 - "unique_context_marker": "[27]"
   "block_ids":
   - 6
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Language Models and Tokenization"
+    - "Language- or Instruction-Derived RS Supervision"
+    - "Language Models and Tokenization"
+    - "Language Models and Tokenization"
+    - "Language- or Instruction-Derived RS Supervision"
 - "unique_context_marker": "[28]"
   "block_ids":
   - 6
@@ -354,44 +282,28 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Vision-Language Connectors to LLMs"
-    - "Instruction Tuning and SFT"
-    - "Instruction Tuning and SFT"
-    - "Instruction Tuning and SFT"
-    - "Language Models and Tokenization"
+  - []
 - "unique_context_marker": "[30]"
   "block_ids":
   - 13
   "intent_labels":
   - []
   "topic_labels":
-  - - "Vision-Language Connectors to LLMs"
-    - "Instruction Tuning and SFT"
-    - "Instruction Tuning and SFT"
-    - "Instruction Tuning and SFT"
-    - "Language Models and Tokenization"
+  - []
 - "unique_context_marker": "[31]"
   "block_ids":
   - 13
   "intent_labels":
   - []
   "topic_labels":
-  - - "Vision-Language Connectors to LLMs"
-    - "Instruction Tuning and SFT"
-    - "Instruction Tuning and SFT"
-    - "Instruction Tuning and SFT"
-    - "Language Models and Tokenization"
+  - []
 - "unique_context_marker": "[32]"
   "block_ids":
   - 13
   "intent_labels":
   - []
   "topic_labels":
-  - - "Vision-Language Connectors to LLMs"
-    - "Instruction Tuning and SFT"
-    - "Instruction Tuning and SFT"
-    - "Instruction Tuning and SFT"
-    - "Language Models and Tokenization"
+  - []
 - "unique_context_marker": "[33]"
   "block_ids":
   - 13
