--- a/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_9.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_9.yaml
@@ -9,11 +9,7 @@
   - []
   - []
   "topic_labels":
-  - - "Vision-Language Connectors to LLMs"
-    - "Vision-Language Connectors to LLMs"
-    - "Instruction Tuning and SFT"
-    - "Vision-Language Connectors to LLMs"
-    - "Vision-Language Connectors to LLMs"
+  - []
   - []
   - []
 - "unique_context_marker": "[Chen et al., 2023a]"
@@ -32,31 +28,27 @@
   - []
   - []
   "topic_labels":
-  - - "Vision-Language Connectors to LLMs"
-    - "Vision-Language Connectors to LLMs"
-    - "Instruction Tuning and SFT"
-    - "Vision-Language Connectors to LLMs"
-    - "Vision-Language Connectors to LLMs"
   - []
   - []
   - []
-  - - "Visual Grounding Corpora and Geometry Labels"
-    - "Visual Grounding Corpora and Geometry Labels"
-    - "Visual Grounding Corpora and Geometry Labels"
-    - "Visual Grounding Corpora and Geometry Labels"
-    - "Visual Grounding Corpora and Geometry Labels"
   - []
+  - []
+  - - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
+    - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[Zhan et al., 2023b]"
   "block_ids":
   - 1
   "intent_labels":
   - []
   "topic_labels":
-  - - "Evaluation Protocols and Diagnostics"
-    - "Object/Region-Level Grounding and Referring"
-    - "Object/Region-Level Grounding and Referring"
-    - "Object/Region-Level Grounding and Referring"
-    - "Object/Region-Level Grounding and Referring"
+  - - "Evaluation Baselines and Tooling"
+    - "Region-Level Understanding"
+    - "Evaluation Baselines and Tooling"
+    - "Task Formulations in RS"
+    - "Evaluation Baselines and Tooling"
 - "unique_context_marker": "[Liu et al., 2023]"
   "block_ids":
   - 1
@@ -78,12 +70,12 @@
   - []
   - []
   "topic_labels":
+  - - "Task Formulations in RS"
+    - "Task Formulations in RS"
+    - "Task Formulations in RS"
+    - "Task Formulations in RS"
+    - "Task Formulations in RS"
   - []
-  - - "Task Formulations in RS VLM"
-    - "Task Formulations in RS VLM"
-    - "Task Formulations in RS VLM"
-    - "Task Formulations in RS VLM"
-    - "Task Formulations in RS VLM"
 - "unique_context_marker": "[Hoxha et al., 2023]"
   "block_ids":
   - 1
@@ -99,16 +91,8 @@
   - []
   - []
   "topic_labels":
-  - - "Image-Level Understanding"
-    - "Image-Level Understanding"
-    - "Image-Level Understanding"
-    - "Image-Level Understanding"
-    - "Image-Level Understanding"
-  - - "Image-Level Understanding"
-    - "Image-Level Understanding"
-    - "Image-Level Understanding"
-    - "Image-Level Understanding"
-    - "Image-Level Understanding"
+  - []
+  - []
 - "unique_context_marker": "[Zhan et al., 2023a]"
   "block_ids":
   - 1
@@ -118,11 +102,7 @@
   - []
   "topic_labels":
   - []
-  - - "Object/Region-Level Grounding and Referring"
-    - "Object/Region-Level Grounding and Referring"
-    - "Object/Region-Level Grounding and Referring"
-    - "Object/Region-Level Grounding and Referring"
-    - "Object/Region-Level Grounding and Referring"
+  - []
 - "unique_context_marker": "[Bashmal et al., 2023]"
   "block_ids":
   - 1
@@ -132,22 +112,18 @@
   - []
   "topic_labels":
   - []
-  - - "Temporal and Multimodal Variants"
-    - "Temporal and Multimodal Variants"
-    - "Temporal and Multimodal Variants"
-    - "Temporal and Multimodal Variants"
-    - "Temporal and Multimodal Variants"
+  - []
 - "unique_context_marker": "[Xiong et al., 2022]"
   "block_ids":
   - 3
   "intent_labels":
   - []
   "topic_labels":
-  - - "Task Formulations in RS VLM"
-    - "Other Topics"
-    - "Task Formulations in RS VLM"
-    - "Task Formulations in RS VLM"
-    - "Task Formulations in RS VLM"
+  - - "Task Formulations in RS"
+    - "Task Formulations in RS"
+    - "Task Formulations in RS"
+    - "Task Formulations in RS"
+    - "Task Formulations in RS"
 - "unique_context_marker": "[OpenAI, 2022]"
   "block_ids":
   - 4
@@ -184,7 +160,11 @@
   - []
   - []
   "topic_labels":
-  - []
+  - - "Feature-Level and Representation Fusion"
+    - "Feature-Level and Representation Fusion"
+    - "Joint Vision–Language Backbones"
+    - "Feature-Level and Representation Fusion"
+    - "Feature-Level and Representation Fusion"
   - []
 - "unique_context_marker": "[Zhu et al., 2023]"
   "block_ids":
@@ -209,11 +189,7 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Image-Level Understanding"
-    - "Image-Level Understanding"
-    - "Image-Level Understanding"
-    - "Image-Level Understanding"
-    - "Image-Level Understanding"
+  - []
 - "unique_context_marker": "[Dai et al., 2023]"
   "block_ids":
   - 5
