--- a/data/raw/gis/vlm4rs/result/taxo_final_gpt-5-2025-08-07/paper_7.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_final_gpt-5-2025-08-07/paper_7.yaml
@@ -28,25 +28,25 @@
   - "Prospective Application"
   - "Research Gap"
   "topic_labels":
-  - "Other Topics"
-  - "Rule-Based and OSM-Derived QA Pairs"
+  - "Object-Level Understanding"
+  - "Manual Expert or Crowdsourced Annotation"
 - "unique_context_marker": "[5]"
   "block_ids":
   - 1
   - 11
   "intent_labels":
-  - "Problem Formulation"
+  - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
-  - "Instruction-Following Conversational Sets"
+  - "Feature-Level and Representation Fusion"
+  - "Manual Expert or Crowdsourced Annotation"
 - "unique_context_marker": "[6]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Research Gap"
+  - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - "Image-Level Understanding"
 - "unique_context_marker": "[7]"
   "block_ids":
   - 1
@@ -94,14 +94,14 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Visual Grounding Corpora and Geometry Labels"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[13]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Object/Region-Level Grounding and Referring"
+  - "Object-Level Understanding"
 - "unique_context_marker": "[14]"
   "block_ids":
   - 1
@@ -115,7 +115,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Visual Grounding Corpora and Geometry Labels"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[16]"
   "block_ids":
   - 1
@@ -131,7 +131,7 @@
   - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
-  - "Visual Grounding Corpora and Geometry Labels"
+  - "Public Remote Sensing Benchmarks"
   - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[18]"
   "block_ids":
@@ -146,7 +146,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Object/Region-Level Grounding and Referring"
+  - "Object-Level Understanding"
 - "unique_context_marker": "[20]"
   "block_ids":
   - 1
@@ -174,7 +174,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Contrastive Alignment Objectives"
+  - "Feature-Level and Representation Fusion"
 - "unique_context_marker": "[24]"
   "block_ids":
   - 1
@@ -186,57 +186,57 @@
   - "Prior Methods"
   "topic_labels":
   - "Other Topics"
-  - "Cross-Modal Alignment and Fusion"
-  - "Attention-Based Co-Encoding"
+  - "Feature-Level and Representation Fusion"
+  - "Language-Conditioned or Semantic Fusion"
 - "unique_context_marker": "[25]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Language-Conditioned or Semantic Fusion"
 - "unique_context_marker": "[26]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Feature-Level and Representation Fusion"
 - "unique_context_marker": "[27]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Language-Conditioned or Semantic Fusion"
 - "unique_context_marker": "[28]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Cross-Sensor and Cross-Region Transfer"
+  - "Domain Shift and Data Scarcity Effects"
 - "unique_context_marker": "[29]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Cross-Sensor and Cross-Region Transfer"
+  - "Other Topics"
 - "unique_context_marker": "[30]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Cross-Sensor and Cross-Region Transfer"
+  - "Domain Shift and Data Scarcity Effects"
 - "unique_context_marker": "[31]"
   "block_ids":
   - 3
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Rule-Based and OSM-Derived QA Pairs"
+  - "Synthetic and Simulated RS Imagery"
 - "unique_context_marker": "[32]"
   "block_ids":
   - 7
@@ -251,12 +251,12 @@
   - 12
   "intent_labels":
   - "Prior Methods"
-  - "Domain Overview"
+  - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
   - "Vision Encoder Choices and Scales"
-  - "Small Object Density and Counting Challenges"
-  - "Small Object Density and Counting Challenges"
+  - "Output Consistency and Error Characteristics"
+  - "Answer Space Constraints"
 - "unique_context_marker": "[34]"
   "block_ids":
   - 7
@@ -284,32 +284,32 @@
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Other Topics"
+  - "Training and Adaptation Regimes"
 - "unique_context_marker": "[38]"
   "block_ids":
   - 11
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - "Small Object Density and Counting Challenges"
+  - "Output Consistency and Error Characteristics"
 - "unique_context_marker": "[39]"
   "block_ids":
   - 11
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Cross-Sensor and Cross-Region Transfer"
+  - "Domain Shift and Data Scarcity Effects"
 - "unique_context_marker": "[40]"
   "block_ids":
   - 11
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Cross-Sensor and Cross-Region Transfer"
+  - "Domain Shift and Data Scarcity Effects"
 - "unique_context_marker": "[41]"
   "block_ids":
   - 11
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - "Bias Analysis and Error Taxonomies"
+  - "Bias and Fairness Considerations"
