--- a/data/raw/gis/vlm4rs/result/taxo_reverse_gpt-5-2025-08-07/paper_4.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_reverse_gpt-5-2025-08-07/paper_4.yaml
@@ -7,22 +7,22 @@
   - "Prior Methods"
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Rule-Based and OSM-Derived QA Pairs"
-  - null
+  - "Public Remote Sensing Benchmarks"
+  - "Feature-Level and Representation Fusion"
 - "unique_context_marker": "[2]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Language Models and Tokenization"
+  - "Feature-Level and Representation Fusion"
 - "unique_context_marker": "[3]"
   "block_ids":
   - 1
   - 2
   "intent_labels":
   - "Prior Methods"
-  - "Prior Methods"
+  - null
   "topic_labels":
   - "Language Models and Tokenization"
   - "Language Models and Tokenization"
@@ -34,34 +34,34 @@
   - "Prior Methods"
   - "Result Comparison"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
-  - "Cross-Modal Alignment and Fusion"
+  - "Joint Vision–Language Backbones"
+  - "Evaluation Baselines and Tooling"
 - "unique_context_marker": "[5]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[6]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[7]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[8]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Other Topics"
 - "unique_context_marker": "[9]"
@@ -94,14 +94,14 @@
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - null
 - "unique_context_marker": "[13]"
   "block_ids":
   - 2
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[14]"
   "block_ids":
   - 2
@@ -113,16 +113,16 @@
   "block_ids":
   - 3
   "intent_labels":
-  - "Benchmark Utilization"
+  - "Setting/Protocal Adoption"
   "topic_labels":
-  - "Train/Val/Test Splits and Domain-Shift Protocols"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[16]"
   "block_ids":
   - 3
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Dataset Construction and Supervision Sources"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[17]"
   "block_ids":
   - 3
