--- a/data/raw/gis/vlm4rs/human_todo/paper_2.yaml
+++ b/data/raw/gis/vlm4rs/human_todo/paper_2.yaml
@@ -54,45 +54,45 @@ blocks:
   citations:
   - marker: '[1]'
     intent_label: Prospective Application
-    topic_label: Other Topics
+    topic_label: Image-Level Understanding
   - marker: '[2]'
     intent_label: Prior Methods
-    topic_label: Other Topics
+    topic_label: Image-Level Understanding
   - marker: '[3]'
     intent_label: Research Gap
-    topic_label: Robustness, Domain Shift, and Generalization
+    topic_label: Image-Level Understanding
   - marker: '[4]'
     intent_label: Research Gap
-    topic_label: Robustness, Domain Shift, and Generalization
+    topic_label: Image-Level Understanding
   - marker: '[5]'
     intent_label: Prior Methods
-    topic_label: Representation Learning Backbones for RS
+    topic_label: Image-Level Understanding
   - marker: '[6]'
     intent_label: Prior Methods
     topic_label: Vision Encoder Choices and Scales
   - marker: '[7]'
     intent_label: Prior Methods
-    topic_label: Vision Encoder Choices and Scales
+    topic_label: Feature-Level and Representation Fusion
   - marker: '[8]'
     intent_label: Research Gap
-    topic_label: Zero-/Few-Shot and Prompt Sensitivity
+    topic_label: Manual Expert or Crowdsourced Annotation
   - marker: '[9]'
     intent_label: Research Gap
-    topic_label: Zero-/Few-Shot and Prompt Sensitivity
+    topic_label: Manual Expert or Crowdsourced Annotation
   - marker: '[10]'
     intent_label: Research Gap
-    topic_label: Zero-/Few-Shot and Prompt Sensitivity
+    topic_label: Manual Expert or Crowdsourced Annotation
   - marker: '[11]'
     intent_label: Prior Methods
-    topic_label: Contrastive Alignment Objectives
+    topic_label: Joint Vision–Language Backbones
   - marker: '[12]'
     intent_label: Prior Methods
-    topic_label: Attention-Based Co-Encoding
+    topic_label: Joint Vision–Language Backbones
   - marker: '[13]'
     intent_label: Prior Methods
-    topic_label: Attention-Based Co-Encoding
+    topic_label: Joint Vision–Language Backbones
   - marker: '[14]'
-    intent_label: Prior Methods
+    intent_label: Result Comparison
     topic_label: Vision Encoder Choices and Scales
 - block_id: 2
   content: In this section, we will first introduce the utilized vision-language multimodal model CLIP, and then explain the
@@ -229,10 +229,10 @@ blocks:
     topic_label: Vision Encoder Choices and Scales
   - marker: '[17]'
     intent_label: Benchmark Utilization
-    topic_label: Image-Level Understanding
+    topic_label: Public Remote Sensing Benchmarks
   - marker: '[18]'
     intent_label: Benchmark Utilization
-    topic_label: Image-Level Understanding
+    topic_label: Public Remote Sensing Benchmarks
 - block_id: 6
   content: 'AID Dataset: It is a large-scale dataset used for aerial image classification in remote sensing scenarios. It
     consists of 10,000 sample images of 30 different types of aerial scenes. Each category contains 200 to 400 samples. The
