--- a/data/raw/gis/vlm4rs/result/cot_output_gpt-5-2025-08-07/paper_2.yaml
+++ b/data/raw/gis/vlm4rs/result/cot_output_gpt-5-2025-08-07/paper_2.yaml
@@ -5,35 +5,35 @@
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Other Topics"
+  - "Image-Level Understanding"
 - "unique_context_marker": "[2]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - "Image-Level Understanding"
 - "unique_context_marker": "[3]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Robustness, Domain Shift, and Generalization"
+  - "Image-Level Understanding"
 - "unique_context_marker": "[4]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Robustness, Domain Shift, and Generalization"
+  - "Image-Level Understanding"
 - "unique_context_marker": "[5]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Representation Learning Backbones for RS"
+  - "Image-Level Understanding"
 - "unique_context_marker": "[6]"
   "block_ids":
   - 1
@@ -47,55 +47,55 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Vision Encoder Choices and Scales"
+  - "Feature-Level and Representation Fusion"
 - "unique_context_marker": "[8]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Zero-/Few-Shot and Prompt Sensitivity"
+  - "Manual Expert or Crowdsourced Annotation"
 - "unique_context_marker": "[9]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Zero-/Few-Shot and Prompt Sensitivity"
+  - "Manual Expert or Crowdsourced Annotation"
 - "unique_context_marker": "[10]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Zero-/Few-Shot and Prompt Sensitivity"
+  - "Manual Expert or Crowdsourced Annotation"
 - "unique_context_marker": "[11]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   "topic_labels":
-  - "Contrastive Alignment Objectives"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[12]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[13]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Co-Encoding"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[14]"
   "block_ids":
   - 1
   - 3
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   - "Model/Architecture Adoption"
   "topic_labels":
   - "Vision Encoder Choices and Scales"
@@ -123,11 +123,11 @@
   "intent_labels":
   - "Benchmark Utilization"
   "topic_labels":
-  - "Image-Level Understanding"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[18]"
   "block_ids":
   - 5
   "intent_labels":
   - "Benchmark Utilization"
   "topic_labels":
-  - "Image-Level Understanding"
+  - "Public Remote Sensing Benchmarks"
