--- a/data/raw/gis/vlm4rs/result/taxo_reverse_gpt-5-2025-08-07/paper_10.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_reverse_gpt-5-2025-08-07/paper_10.yaml
@@ -3,46 +3,46 @@
   "block_ids":
   - 0
   "intent_labels":
-  - null
+  - "Resource Utilization"
   "topic_labels":
-  - "Visual Grounding Corpora and Geometry Labels"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[38]"
   "block_ids":
   - 0
   - 1
   - 5
   "intent_labels":
-  - null
+  - "Resource Utilization"
   - "Prior Methods"
   - "Resource Utilization"
   "topic_labels":
-  - "Visual Grounding Corpora and Geometry Labels"
-  - "Object/Region-Level Grounding and Referring"
-  - "Visual Grounding Corpora and Geometry Labels"
+  - "Public Remote Sensing Benchmarks"
+  - "Object-Level Understanding"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[12]"
   "block_ids":
   - 0
   - 5
   "intent_labels":
-  - null
+  - "Domain Overview"
   - "Resource Utilization"
   "topic_labels":
-  - "Visual Grounding Corpora and Geometry Labels"
-  - "Visual Grounding Corpora and Geometry Labels"
+  - "Public Remote Sensing Benchmarks"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[26]"
   "block_ids":
   - 0
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
-  - "Visual Grounding Corpora and Geometry Labels"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[35]"
   "block_ids":
   - 0
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
-  - "Visual Grounding Corpora and Geometry Labels"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[7]"
   "block_ids":
   - 0
@@ -51,32 +51,32 @@
   - 7
   - 8
   "intent_labels":
-  - null
+  - "Resource Utilization"
   - "Research Gap"
   - "Resource Utilization"
   - "Result Comparison"
-  - "Metrics Utilization"
+  - "Setting/Protocal Adoption"
   "topic_labels":
-  - "Visual Grounding Corpora and Geometry Labels"
-  - "Visual Grounding Corpora and Geometry Labels"
-  - "Visual Grounding Corpora and Geometry Labels"
-  - "Object/Region-Level Grounding and Referring"
-  - "Metrics and Thresholds for Grounding"
+  - "Public Remote Sensing Benchmarks"
+  - "Public Remote Sensing Benchmarks"
+  - "Public Remote Sensing Benchmarks"
+  - "Joint Vision–Language Backbones"
+  - "Spatial Performance Metrics"
 - "unique_context_marker": "[37]"
   "block_ids":
   - 0
   - 1
   "intent_labels":
-  - null
+  - "Research Gap"
   - "Prior Methods"
   "topic_labels":
   - "Pixel-Level and Dense Outputs"
-  - "Visual Grounding Corpora and Geometry Labels"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[30]"
   "block_ids":
   - 0
   "intent_labels":
-  - null
+  - "Prospective Application"
   "topic_labels":
   - "Other Topics"
 - "unique_context_marker": "[17]"
@@ -85,77 +85,77 @@
   - 1
   - 9
   "intent_labels":
-  - null
+  - "Research Gap"
   - "Prior Methods"
   - "Benchmark Utilization"
   "topic_labels":
   - "Pixel-Level and Dense Outputs"
   - "Pixel-Level and Dense Outputs"
-  - null
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[28]"
   "block_ids":
   - 0
   "intent_labels":
-  - null
+  - "Research Gap"
   "topic_labels":
-  - "Other Topics"
+  - "Multi-Task and Joint Training"
 - "unique_context_marker": "[1]"
   "block_ids":
   - 0
   - 7
   "intent_labels":
-  - null
+  - "Research Gap"
   - "Result Comparison"
   "topic_labels":
-  - "Other Topics"
-  - "Object/Region-Level Grounding and Referring"
+  - "Joint Vision–Language Backbones"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[2]"
   "block_ids":
   - 0
   "intent_labels":
-  - null
+  - "Research Gap"
   "topic_labels":
-  - "Other Topics"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[5]"
   "block_ids":
   - 0
   "intent_labels":
-  - null
+  - "Research Gap"
   "topic_labels":
-  - "Other Topics"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[16]"
   "block_ids":
   - 0
   - 6
   "intent_labels":
-  - null
+  - "Research Gap"
   - "Model/Architecture Adoption"
   "topic_labels":
-  - "Other Topics"
-  - "Language Models and Tokenization"
+  - "Joint Vision–Language Backbones"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[4]"
   "block_ids":
   - 0
   - 1
   "intent_labels":
-  - null
+  - "Research Gap"
   - "Prior Methods"
   "topic_labels":
   - "Language Models and Tokenization"
-  - "Object/Region-Level Grounding and Referring"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[14]"
   "block_ids":
   - 0
   - 1
   - 5
   "intent_labels":
-  - null
+  - "Resource Utilization"
   - "Domain Overview"
   - "Resource Utilization"
   "topic_labels":
-  - "Visual Grounding Corpora and Geometry Labels"
+  - "Public Remote Sensing Benchmarks"
   - "Image-Level Understanding"
-  - "Visual Grounding Corpora and Geometry Labels"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[15]"
   "block_ids":
   - 1
@@ -190,14 +190,14 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Object/Region-Level Grounding and Referring"
+  - "Object-Level Understanding"
 - "unique_context_marker": "[13]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Object/Region-Level Grounding and Referring"
+  - "Object-Level Understanding"
 - "unique_context_marker": "[11]"
   "block_ids":
   - 1
@@ -210,16 +210,16 @@
   - 1
   - 3
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Textualization of Geometry and Masks"
-  - "Textualization of Geometry and Masks"
+  - "Joint Vision–Language Backbones"
+  - "Language Models and Tokenization"
 - "unique_context_marker": "[8]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
   - "Pixel-Level and Dense Outputs"
 - "unique_context_marker": "[23]"
@@ -228,26 +228,26 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Object/Region-Level Grounding and Referring"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[31]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Object/Region-Level Grounding and Referring"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[34]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Object/Region-Level Grounding and Referring"
+  - "Joint Vision–Language Backbones"
 - "unique_context_marker": "[39]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
   - "Pixel-Level and Dense Outputs"
 - "unique_context_marker": "[32]"
@@ -270,7 +270,7 @@
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Object/Region-Level Grounding and Referring"
+  - "Object-Level Understanding"
 - "unique_context_marker": "[22]"
   "block_ids":
   - 1
@@ -279,8 +279,8 @@
   - "Research Gap"
   - "Result Comparison"
   "topic_labels":
-  - "Object/Region-Level Grounding and Referring"
-  - "Object/Region-Level Grounding and Referring"
+  - "Object-Level Understanding"
+  - "Evaluation Baselines and Tooling"
 - "unique_context_marker": "[40]"
   "block_ids":
   - 1
@@ -289,29 +289,29 @@
   - "Research Gap"
   - "Result Comparison"
   "topic_labels":
-  - "Object/Region-Level Grounding and Referring"
-  - "Object/Region-Level Grounding and Referring"
+  - "Object-Level Understanding"
+  - "Evaluation Baselines and Tooling"
 - "unique_context_marker": "[24]"
   "block_ids":
   - 2
   "intent_labels":
   - "Model/Architecture Adoption"
   "topic_labels":
-  - null
+  - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[43]"
   "block_ids":
   - 2
   "intent_labels":
   - "Model/Architecture Adoption"
   "topic_labels":
-  - null
+  - "Language Models and Tokenization"
 - "unique_context_marker": "[44]"
   "block_ids":
   - 3
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Textualization of Geometry and Masks"
+  - "Object-Level Understanding"
 - "unique_context_marker": "[9]"
   "block_ids":
   - 3
@@ -320,47 +320,47 @@
   - "Algorithm/Principle Adoption"
   - "Result Comparison"
   "topic_labels":
-  - "Textualization of Geometry and Masks"
-  - "Textualization of Geometry and Masks"
+  - "Pixel-Level and Dense Outputs"
+  - "Pixel-Level and Dense Outputs"
 - "unique_context_marker": "[19]"
   "block_ids":
   - 6
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Other Topics"
+  - "Training and Adaptation Regimes"
 - "unique_context_marker": "[12, 26, 35]"
   "block_ids":
   - 6
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Visual Grounding Corpora and Geometry Labels"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[14, 22]"
   "block_ids":
   - 7
   "intent_labels":
   - "Setting/Protocal Adoption"
   "topic_labels":
-  - "Metrics and Thresholds for Grounding"
+  - "Evaluation Baselines and Tooling"
 - "unique_context_marker": "[36]"
   "block_ids":
   - 8
   "intent_labels":
   - "Metrics Utilization"
   "topic_labels":
-  - "Metrics and Thresholds for Grounding"
+  - "Spatial Performance Metrics"
 - "unique_context_marker": "[33, 37]"
   "block_ids":
   - 9
   "intent_labels":
   - "Metrics Utilization"
   "topic_labels":
-  - null
+  - "Spatial Performance Metrics"
 - "unique_context_marker": "[6]"
   "block_ids":
   - 9
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - null
+  - "Evaluation Baselines and Tooling"
