--- a/data/raw/gis/vlm4rs/result/taxo_reverse_gpt-5-2025-08-07/paper_8.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_reverse_gpt-5-2025-08-07/paper_8.yaml
@@ -3,247 +3,247 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Prospective Application"
   "topic_labels":
   - "Other Topics"
 - "unique_context_marker": "[2]"
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Prospective Application"
   "topic_labels":
   - "Other Topics"
 - "unique_context_marker": "[3]"
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Prospective Application"
   "topic_labels":
   - "Other Topics"
 - "unique_context_marker": "[4]"
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[5]"
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[6]"
   "block_ids":
   - 1
   - 3
   - 4
   "intent_labels":
-  - null
-  - "Domain Overview"
-  - null
+  - "Prior Methods"
+  - "Prior Methods"
+  - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
-  - "Image-Level Understanding"
-  - "Vision-Language Connectors to LLMs"
+  - "Joint Vision–Language Backbones"
+  - "Manual Expert or Crowdsourced Annotation"
+  - null
 - "unique_context_marker": "[7]"
   "block_ids":
   - 1
   - 4
   "intent_labels":
-  - null
-  - null
+  - "Prior Methods"
+  - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - "Joint Vision–Language Backbones"
   - null
 - "unique_context_marker": "[8]"
   "block_ids":
   - 1
   - 4
   "intent_labels":
-  - null
-  - null
+  - "Prior Methods"
+  - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
-  - "Hallucination Mitigation and Honesty"
+  - "Joint Vision–Language Backbones"
+  - null
 - "unique_context_marker": "[9]"
   "block_ids":
   - 1
   - 4
   "intent_labels":
-  - null
-  - null
+  - "Prior Methods"
+  - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - "Joint Vision–Language Backbones"
   - null
 - "unique_context_marker": "[10]"
   "block_ids":
   - 1
   - 4
   "intent_labels":
-  - null
-  - null
+  - "Prior Methods"
+  - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - "Joint Vision–Language Backbones"
   - null
 - "unique_context_marker": "[11]"
   "block_ids":
   - 1
   - 4
   "intent_labels":
-  - null
-  - null
+  - "Prior Methods"
+  - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - "Joint Vision–Language Backbones"
   - null
 - "unique_context_marker": "[12]"
   "block_ids":
   - 3
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - "Dataset Construction and Supervision Sources"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[13]"
   "block_ids":
   - 3
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - "Dataset Construction and Supervision Sources"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[14]"
   "block_ids":
   - 3
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - "Dataset Construction and Supervision Sources"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[15]"
   "block_ids":
   - 3
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - "Dataset Construction and Supervision Sources"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[16]"
   "block_ids":
   - 3
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - "Dataset Construction and Supervision Sources"
+  - "Public Remote Sensing Benchmarks"
 - "unique_context_marker": "[17]"
   "block_ids":
   - 3
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - "Image-Level Understanding"
+  - "Manual Expert or Crowdsourced Annotation"
 - "unique_context_marker": "[18]"
   "block_ids":
   - 3
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - "Image-Level Understanding"
+  - "Manual Expert or Crowdsourced Annotation"
 - "unique_context_marker": "[19]"
   "block_ids":
   - 3
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - "Dataset Construction and Supervision Sources"
+  - null
 - "unique_context_marker": "[20]"
   "block_ids":
   - 3
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - "Contrastive Alignment Objectives"
+  - null
 - "unique_context_marker": "[21]"
   "block_ids":
   - 3
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - "Dataset Construction and Supervision Sources"
+  - null
 - "unique_context_marker": "[22]"
   "block_ids":
   - 4
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
-  - "Other Topics"
+  - null
 - "unique_context_marker": "[23]"
   "block_ids":
   - 4
   "intent_labels":
-  - null
+  - "Prior Methods"
   "topic_labels":
-  - "Contrastive Alignment Objectives"
+  - null
 - "unique_context_marker": "[24]"
   "block_ids":
   - 4
   "intent_labels":
-  - null
+  - "Prior Methods"
   "topic_labels":
-  - "Instruction Tuning and SFT"
+  - null
 - "unique_context_marker": "[25]"
   "block_ids":
   - 4
   "intent_labels":
-  - null
+  - "Prior Methods"
   "topic_labels":
-  - "Other Topics"
+  - null
 - "unique_context_marker": "[26]"
   "block_ids":
   - 6
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Language Models and Tokenization"
+  - null
 - "unique_context_marker": "[27]"
   "block_ids":
   - 6
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Language Models and Tokenization"
+  - null
 - "unique_context_marker": "[28]"
   "block_ids":
   - 6
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Other Topics"
+  - "Rule-Based or GIS/Map-Derived"
 - "unique_context_marker": "[29]"
   "block_ids":
   - 13
   "intent_labels":
   - "Result Comparison"
   "topic_labels":
-  - null
+  - "Evaluation Baselines and Tooling"
 - "unique_context_marker": "[30]"
   "block_ids":
   - 13
   "intent_labels":
   - "Result Comparison"
   "topic_labels":
-  - null
+  - "Evaluation Baselines and Tooling"
 - "unique_context_marker": "[31]"
   "block_ids":
   - 13
   "intent_labels":
-  - "Model/Architecture Adoption"
+  - "Result Comparison"
   "topic_labels":
-  - null
+  - "Evaluation Baselines and Tooling"
 - "unique_context_marker": "[32]"
   "block_ids":
   - 13
   "intent_labels":
-  - "Model/Architecture Adoption"
+  - "Result Comparison"
   "topic_labels":
-  - null
+  - "Evaluation Baselines and Tooling"
 - "unique_context_marker": "[33]"
   "block_ids":
   - 13
